--- a/Hausautomation/Pages/PageRoom.xaml
+++ b/Hausautomation/Pages/PageRoom.xaml
@@ -23,48 +23,52 @@
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="data:Device">
                     <RelativePanel>
-                        <Image x:Name="bmImage" Source="{x:Bind Image}" MaxWidth="150" Stretch="Uniform" Margin="34,24,0,24"/>
-                        <TextBlock x:Name="tbTextblock1" RelativePanel.RightOf="bmImage" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock1, Mode=OneWay}"/>
-                        <Slider x:Name="slSlider1" RelativePanel.RightOf="tbTextblock1" Orientation="Vertical" TickFrequency="10"
-                                Margin="24,24,24,24" Height="150" TickPlacement="Outside" Value="{x:Bind Slider, Mode=TwoWay}"
-                                Visibility="{x:Bind bSlider1, Mode=OneWay}"/>
-                        <Button x:Name="btButton1" RelativePanel.RightOf="tbTextblock1" Margin="25,110,24,24" Content="Aus"
-                                Visibility="{x:Bind bButton1, Mode=OneWay}" Click="{x:Bind StateChangeA}"/>
-                        <Button x:Name="btButton2" RelativePanel.RightOf="tbTextblock1" Margin="27,60,24,24" Content="Ein"
-                                Visibility="{x:Bind bButton1, Mode=OneWay}" Click="{x:Bind StateChangeB}"/>
-                        <Button x:Name="btButtonUn" RelativePanel.RightOf="tbTextblock1" Margin="40,130,15,24" Content="U"
-                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeA}"/>
-                        <Button x:Name="btButtonOb" RelativePanel.RightOf="tbTextblock1" Margin="40,40,15,24" Content="O"
-                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeB}"/>
-                        <Button x:Name="btButtonLi" RelativePanel.RightOf="tbTextblock1" Margin="15,85,15,24" Content="L"
-                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeC}"/>
-                        <Button x:Name="btButtonRe" RelativePanel.RightOf="tbTextblock1" Margin="65,85,15,24" Content="R"
-                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeD}"/>
-                        <ToggleSwitch x:Name="tgSwitch1" Margin="20,145,-100,24" RelativePanel.RightOf="tbTextblock1"
-                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind Switch1State, Mode=TwoWay}"
-                                Visibility="{x:Bind bSwitch1, Mode=OneWay}" >
-                            <ToggleSwitch.RenderTransform>
-                                <CompositeTransform Rotation="-90"/>
-                            </ToggleSwitch.RenderTransform>
-                        </ToggleSwitch>
-                        <ToggleSwitch x:Name="tgSwitch2" Margin="0,145,-100,24" RelativePanel.RightOf="tgSwitch1"
-                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch2State, Mode=OneWay}"
-                                Visibility="{x:Bind bSwitch2, Mode=OneWay}" >
-                            <ToggleSwitch.RenderTransform>
-                                <CompositeTransform Rotation="-90"/>
-                            </ToggleSwitch.RenderTransform>
-                        </ToggleSwitch>
-                        <TextBlock x:Name="tbTextblock2" RelativePanel.RightOf="slSlider1" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock2, Mode=OneWay}" Visibility="{x:Bind bTextblock2, Mode=OneWay}"/>
-                        <TextBlock x:Name="tbTextblock3" RelativePanel.RightOf="btButton1" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock3, Mode=OneWay}" Visibility="{x:Bind bTextblock3, Mode=OneWay}"/>
-                        <TextBlock x:Name="tbTextblock4" RelativePanel.RightOf="tgSwitch1" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock4, Mode=OneWay}" Visibility="{x:Bind bTextblock4, Mode=OneWay}"/>
-                        <TextBlock x:Name="tbTextblock5" RelativePanel.RightOf="tgSwitch2" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock5, Mode=OneWay}" Visibility="{x:Bind bTextblock5, Mode=OneWay}"/>
-                        <TextBlock x:Name="tbTextblock6" RelativePanel.RightOf="btButtonRe" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock6, Mode=OneWay}" Visibility="{x:Bind bTextblock6, Mode=OneWay}"/>
+                        <Image x:Name="bmImage" Margin="34,24,0,24" MaxWidth="150" Stretch="Uniform" Source="{x:Bind Image}"/>
+                        <TextBlock x:Name="tbTextblock1" Margin="24,24,24,24" RelativePanel.RightOf="bmImage"
+                                   Style="{ThemeResource BaseTextBlockStyle}" Text="{x:Bind Textblock1, Mode=OneWay}"/>
+                        <RelativePanel x:Name="rpControl" RelativePanel.RightOf="tbTextblock1">
+                            <Slider x:Name="slSlider1" Margin="24,24,24,24" Height="150" Orientation="Vertical"
+                                    TickFrequency="10" TickPlacement="Outside" Value="{x:Bind Slider, Mode=TwoWay}"
+                                    Visibility="{x:Bind bSlider1, Mode=OneWay}"/>
+                            <Button x:Name="btButton2" Margin="27,60,24,24" Content="Ein"
+                                    Visibility="{x:Bind bButton1, Mode=OneWay}" Click="{x:Bind StateChangeB}"
+                                    IsEnabled="{x:Bind bButtonEnabled, Mode=OneWay}"/>
+                            <Button x:Name="btButton1" Margin="25,110,24,24" Content="Aus"
+                                    Visibility="{x:Bind bButton1, Mode=OneWay}" Click="{x:Bind StateChangeA}"
+                                    IsEnabled="{x:Bind bButtonEnabled, Mode=OneWay}"/>
+                            <Button x:Name="btButtonOb" Margin="38,40,15,24" Content="O"
+                                    Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeB}"/>
+                            <Button x:Name="btButtonLi" Margin="15,85,15,24" Content="L"
+                                    Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeC}"/>
+                            <Button x:Name="btButtonRe" Margin="65,85,15,24" Content="R"
+                                    Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeD}"/>
+                            <Button x:Name="btButtonUn" Margin="40,130,15,24" Content="U"
+                                    Visibility="{x:Bind bButton2, Mode=OneWay}" Click="{x:Bind StateChangeA}"/>
+                            <Button x:Name="btButton2Key4" Margin="24,24,15,24" Content="&#x1F512;"
+                                    Visibility="{x:Bind bButton3, Mode=OneWay}" Click="{x:Bind StateChangeB}"/>
+                            <Button x:Name="btButton1Key4" Margin="24,68,15,24" Content="&#x1F513;"
+                                    Visibility="{x:Bind bButton3, Mode=OneWay}" Click="{x:Bind StateChangeA}"/>
+                            <Button x:Name="btButton4Key4" Margin="24,110,15,24" Content="&#x1F6AA;"
+                                    Visibility="{x:Bind bButton3, Mode=OneWay}" Click="{x:Bind StateChangeF}"/>
+                            <Button x:Name="btButton3Key4" Margin="24,154,15,24" Content="&#x1F4A1;"
+                                    Visibility="{x:Bind bButton3, Mode=OneWay}" Click="{x:Bind StateChangeE}"/>
+                            <ToggleSwitch x:Name="tgSwitch1" Margin="20,145,-100,24"
+                                          OffContent="Aus" OnContent="Ein" IsOn="{x:Bind Switch1State, Mode=TwoWay}"
+                                          Visibility="{x:Bind bSwitch1, Mode=OneWay}">
+                                <ToggleSwitch.RenderTransform>
+                                    <CompositeTransform Rotation="-90"/>
+                                </ToggleSwitch.RenderTransform>
+                            </ToggleSwitch>
+                            <ToggleSwitch x:Name="tgSwitch2" Margin="0,145,-100,24" RelativePanel.RightOf="tgSwitch1"
+                                          OffContent="Aus" OnContent="Ein" IsOn="{x:Bind Switch2State, Mode=TwoWay}"
+                                          Visibility="{x:Bind bSwitch2, Mode=OneWay}">
+                                <ToggleSwitch.RenderTransform>
+                                    <CompositeTransform Rotation="-90"/>
+                                </ToggleSwitch.RenderTransform>
+                            </ToggleSwitch>
+                        </RelativePanel>
+                        <TextBlock x:Name="tbTextblock2" Margin="24,24,24,24" RelativePanel.RightOf="rpControl" 
+                                   Style="{ThemeResource BaseTextBlockStyle}" Text="{x:Bind Textblock2, Mode=OneWay}"/>
                     </RelativePanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
